# getkrxcode

./: .gitignore  LICENSE  README.md  examples.ipynb  main.py  project.py  pyproject.toml  requirements.txt  serviceKey.txt  serviceKeywithdoublequotes.txt  serviceKeywithsinglequotes.txt  test_project.py
src/getkrxcode/: __init__.py  project.py
src/getkrxcode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: serviceKeywithdoublequotes.txt  serviceKeywithsinglequotes.txt  test_project.py
