[project]
name = "getkrxcode"
version = "0.1.2"
authors = [
  { name="kimmh", email="mluchk@gmail.com" },
]
description = "a package to get KRX stock code using data.go.kr API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.27.2",
    "pandas>=2.2.3",
]

[project.urls]
Homepage = "https://github.com/xerxes-k/getkrxcode"
Issues = "https://github.com/xerxes-k/getkrxcode/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

